01-ingress/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
        - name: testapp
          image: klwxsrx/arch-course-labs-testapp
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
          readinessProbe:
            httpGet:
              path: /health/ # use a different probe impl for a real app
              port: 8000
