01-ingress/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  selector:
    app: testapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
